--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "apexcharts": "^3.26.2",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
     "botstrap": "^0.20.1",
     "react": "^17.0.2",
