--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
     "botstrap": "^0.20.1",
+    "date-fns": "^2.21.3",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
